testdata/baselines/reference/submodule/compiler/capturedLetConstInLoop10_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
capturedLetConstInLoop10_ES6.ts(3,23): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== capturedLetConstInLoop10_ES6.ts (1 errors) ====
    class A {
        foo() {
            for (let x of [0]) {
                          ~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
                let f = function() { return x; };
                this.bar(f());
            }
        }
        bar(a: number) {
        }
    
        baz() {
            for (let x of [1]) {
                let a = function() {  return x; };
                for (let y of [1]) {
                    let b = function() { return y; };
                    this.bar(b());
                }
                this.bar(a());
            }
        }
        baz2() {
            for (let x of [1]) {
                let a = function() {  return x; };
                this.bar(a());
                for (let y of [1]) {
                    let b = function() { return y; };
                    this.bar(b());
                }
            }
        }
    }
    
    class B {
        foo() {
            let a =
                () => {
                    for (let x of [0]) {
                        let f = () => x;
                        this.bar(f());
                    }
                }
        }
        bar(a: number) {
        }
    }